.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/SalesIQ__Quarterly_Process__c.object
<CustomObject>
    <description>Maintains Effective dates and window dates for quarterly process</description>
    <fields>
        <fullName>SalesIQ__Approval_End_Date__c</fullName>
        <label>Approval End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Approval_Start_Date__c</fullName>
        <label>Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Quarter__c</fullName>
        <label>Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Submission_End_Date__c</fullName>
        <label>Submission End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Submission_Start_Date__c</fullName>
        <label>Submission Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quarterly Process</label>
    <nameField>
        <label>Quarterly Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quarterly Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SalesIQ__Approval_End_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SalesIQ__Approval_End_Date__c)</errorConditionFormula>
        <errorMessage>Please Enter Approval End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesIQ__Approval_End_date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>SalesIQ__Approval_Start_Date__c &gt; SalesIQ__Approval_End_Date__c</errorConditionFormula>
        <errorMessage>Approval End Date Should be greater than Approval Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesIQ__Approval_Start_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SalesIQ__Approval_Start_Date__c)</errorConditionFormula>
        <errorMessage>Please Enter Approval Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesIQ__Approval_n_sub_End_date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>SalesIQ__Submission_End_Date__c &gt; SalesIQ__Approval_End_Date__c</errorConditionFormula>
        <errorMessage>Approval End Date Should be greater than Submission End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesIQ__Effective_End_date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>SalesIQ__Approval_End_Date__c &gt;  SalesIQ__Effective_Date__c</errorConditionFormula>
        <errorMessage>Effective Date should be greater than Approval End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesIQ__Subimission_End_date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>SalesIQ__Submission_Start_Date__c &gt;  SalesIQ__Submission_End_Date__c</errorConditionFormula>
        <errorMessage>Submission End Date Should be greater than  Submission Start  Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesIQ__Submission_Start_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SalesIQ__Submission_Start_Date__c)</errorConditionFormula>
        <errorMessage>Please Enter Submission Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesIQ__Submission_end_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SalesIQ__Submission_End_Date__c )</errorConditionFormula>
        <errorMessage>Please Enter Submission End Date</errorMessage>
    </validationRules>
</CustomObject>